@@ -19,6 +19,7 @@
 - Added support for the ':debug' and :quiet hints.
 - Added support for the :day, :week, :month, :quarter and :year hints.
 - Added 'track' command.
+- Added 'cancel' command.
 
 Design completed 2016-03-13
 Project started  2015-11-29
